fix css naming fix header, footer styling conflict fix photo not centered

--- a/deliverit-frontend/src/sections/UserProfileSection/UserProfileSection.css
+++ b/deliverit-frontend/src/sections/UserProfileSection/UserProfileSection.css
@@ -1,7 +1,3 @@
-* {
-  /* border: 1px solid grey; */
-}
-
 .user-profile {
   display: flex;
   flex-direction: column;
@@ -9,24 +5,15 @@
   min-height: 100vh;
 }
 
-/* Reset Styling */
-.user-profile * {
+/* Reset styling */
+.user-profile-section * {
   font-size: 1em;
   line-height: 1em;
   padding: 0;
   margin: 0;
 }
 
-.user-profile-navbar {
-  order: 1;
-}
-
-.user-profile-footer {
-  order: 3;
-}
-
 .user-profile-section {
-  order: 2;
   flex-grow: 1;
 
   display: flex;
@@ -34,21 +21,28 @@
   background-color: #fbfbfc;
 }
 
-.user-profile-section-divider {
+.user-profile-section--divider {
   border-top: solid #dedede 1px;
 }
 
-.user-profile-section-button-wrapper {
+.user-profile-section-button--wrapper {
   margin: 1rem 0;
 }
 
-.user-profile-section-title {
+.user-profile-section--title {
   padding: 1.5rem;
   margin: 0 auto;
   font-size: 2em;
 }
 
-.user-profile-section-photo-frame {
+.user-profile-section--photo {
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.user-profile-section--photo-frame {
   margin: 0 auto;
   width: 80vw;
   height: 80vw;
@@ -56,17 +50,17 @@
   background-color: lightcoral;
 }
 
-.user-profile-section-content {
+.user-profile-section--content {
   padding: 0 10vw;
 }
 
-.user-profile-section-rating {
+.user-profile-section--rating {
   display: grid;
   grid-template-columns: auto 1fr auto;
   margin-bottom: 1.5rem;
 }
 
-.user-profile-section-rating-overall-wrapper {
+.user-profile-section--rating-overall-wrapper {
   grid-column: 1;
   display: flex;
   flex-direction: row;
@@ -74,7 +68,7 @@
   align-items: baseline;
 }
 
-.user-profile-section-rating-title {
+.user-profile-section--rating-title {
   text-align: left;
   font-size: 1.25em;
   margin-bottom: 10px;
@@ -82,54 +76,54 @@
   font-weight: 100;
 }
 
-.user-profile-section-rating-overall {
+.user-profile-section--rating-overall {
   text-align: left;
   font-size: 1.25em;
   font-weight: bold;
   color: #3e5160;
 }
 
-.user-profile-section-rating-stars {
+.user-profile-section--rating-stars {
   display: flex;
   flex-direction: row;
 
   margin-left: 20px;
 }
 
-.user-profile-section-rating-star {
+.user-profile-section--rating-star {
   height: 1em;
   width: 1em;
   margin-right: 5px;
 }
 
-.user-profile-section-stats-wrapper {
+.user-profile-section--stats-wrapper {
   grid-column: 3;
   text-align: left;
 }
 
-.user-profile-section-account-information {
+.user-profile-section--account-information {
   display: flex;
   flex-direction: column;
   text-align: left;
 }
 
-.user-profile-section-name {
+.user-profile-section--name {
   font-size: 2rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
 
-.user-profile-section-account-information-header {
+.user-profile-section--account-information-header {
   font-size: 1.25rem;
   color: #969696;
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
-.user-profile-section-password {
+.user-profile-section--password {
   width: 100%;
 }
 
-.user-profile-section-password-input {
+.user-profile-section--password-input {
   box-sizing: border-box;
   border: 1px #d9d9d9 solid;
   border-radius: 5px;
@@ -138,33 +132,18 @@
   width: inherit;
 }
 
-.user-profile-section-password-input::placeholder {
+.user-profile-section--password-input::placeholder {
   color: #b1b1b1;
 }
 
 @media only screen and (min-width: 1024px) {
   .user-profile {
-    /* display: grid; */
-    /* grid-template-rows: auto 1fr auto; */
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /* height: 100vh; */
-  }
-
-  .user-profile-navbar {
-    /* grid-row: 1; */
-    order: 1;
-  }
-
-  .user-profile-footer {
-    /* grid-row: 3; */
-    order: 3;
   }
 
   .user-profile-section {
-    /* grid-row: 2; */
-    order: 2;
     flex-grow: 1;
     display: grid;
     grid-template-columns: 10vw 2fr 6fr 10vw;
@@ -177,60 +156,37 @@
 
     /* height: auto; */
     min-height: 100vh;
-
-    /* temporary */
-    /* background-color: lightcoral; */
   }
 
-  .user-profile-section-content {
+  .user-profile-section--content {
     padding-left: 5vw;
   }
 
-  .user-profile-section-title {
+  .user-profile-section--title {
     grid-area: title;
     height: inherit;
     padding-left: 0;
     font-size: 2.5rem;
-
-    /* temporary */
-    /* background-color: lightblue; */
   }
 
-  .user-profile-section-photo {
+  .user-profile-section--photo {
     grid-area: photo;
     align-self: start;
     display: flex;
     flex-direction: column;
-    /* width: 100px; */
-
-    /* temporary */
-    /* background-color: lightcyan; */
   }
 
-  .user-profile-section-photo-frame {
+  .user-profile-section--photo-frame {
     width: 100%;
     height: auto;
-
-    /* temporary */
-    /* background-color: lightskyblue; */
   }
 
-  .user-profile-section-content {
+  .user-profile-section--content {
     grid-area: content;
-
-    /* temporary */
-    /* background-color: lightpink; */
   }
 
-  .user-profile-section-title {
+  .user-profile-section--title {
     margin: 0;
     justify-self: start;
-
-    /* temporary */
-    /* background-color: lightgoldenrodyellow; */
-  }
-
-  .align-left {
-    text-align: left;
   }
 }
